includes = [
    'hlib.h',
    'libhelper/compression/lzfse.h',
    'libhelper/compression/lzss.h',
    'libhelper/img4/sep.h',
    'libhelper/libhelper-dyld.h',
    'libhelper/libhelper-fat.h',
    'libhelper/libhelper.h',
    'libhelper/libhelper-macho.h',
    'libhelper/macho/command-types.h',
    'libhelper/macho/header-types.h',
    'lzfse/lzfse_encode_tables.h',
    'lzfse/lzfse_fse.h',
    'lzfse/lzfse_internal.h',
    'lzfse/lzfse_tunables.h',
    'lzfse/lzvn_decode_base.h',
    'lzfse/lzvn_encode_base.h',
    'version.h',
]

libhelper_inc = include_directories('.')

install_headers(includes)